     Lithuanian, Polish, Russian, Slovak
   * updated DejaVuSans to 2.29
 * User interface:
   * Fix an assertion failure when an unexpected mouse button was used
     (bug #13126)
   * Fixed bug #13161: Inactive weapon special name and description not used
 * Miscellaneous and bug fixes:
   * Fix another campaign replay bug (#13139)
   * Fix WML [advancefrom] bug (#13176)

Version 1.5.13:
 * Graphics:
   * New portrait for the Woodsman, Bowman, male Thief
 * Language and i18n:
   * updated translations: Chinese (Simplified), Czech, French, Finnish,
     Hungarian, Polish, Russian, Slovak, Turkish
 * Multiplayer:
   * The engine now send the exact path used by units, preventing visual
     differences between clients.
 * User interface:
   * Fixed a crash when trying to use scrollbars in an invisible widget
   * Fixed the setting of the ellipse_mode in ttext
   * Improve the showing of ellipses in the textbox (bug #13083)
   * Fix bad anti-aliasing of in-game MP chat (bug #12938)
 * Miscellaneous and bug fixes:
   * Fix another savegame cache corruption
   * Fixed bug #13099: MP lobby player list becomes inaccurate over time
   * Fix bug #13118: OOS/replay bug when moving near ambushed units
   * Better fog update after "slow" and "stone" attacks
   * Updated Doxyfile to 1.5.6 format
   * Fix regression about missing sighted event triggered by AI in replay
   * Renamed some [ai] attributes to use correct English spelling.
     Support for their misspelled forms will be removed in 1.7.0.
     * simple_targetting -> simple_targeting
     * scout_village_targetting -> scout_village_targeting

Version 1.5.12:
 * Add-on server:
   * Ignore case on add-on (file)names (bug #13080)
   * Disallow uploading of add-ons with no title, type, author, version or
     description specified and warn about invalid versions
 * Graphics:
   * New portrait for the female Thief
   * New tiles for summer and fall deciduous and mixed forests